# tuna

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  buildspec.json  format.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build-plugin/: action.yaml  action.yml
.github/scripts/: .Aptfile  .Brewfile  .Wingetfile  .build.zsh  Build-Windows.ps1  check-cmake.sh  check-format.sh
.github/scripts/utils.zsh/: setup_linux
.github/workflows/: build-project.yaml  main.yml  nightly.yml  push.yaml
cmake/: FindDBus.cmake  ObsPluginHelpers.cmake
cmake/bundle/windows/: installer-Windows.iss.in
cmake/common/: compiler_common.cmake
cmake/linux/: compilerconfig.cmake
cmake/macos/: compilerconfig.cmake  xcode.cmake
cmake/windows/: compilerconfig.cmake
data/: jarowankler.js  lyrics.html  lyrics_ytm.html  widget.html
data/locale/: da-DK.ini  de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  pt-BR.ini  ru-RU.ini  zh-CN.ini  zh-TW.ini
package/: README  README.txt  README.txt.in  install-linux.sh  install-mac.sh  installer-Windows.iss.in  installer-macOS.pkgproj.in  installer.iss  macOS-intro.txt  package-linux.sh  package-mac.sh  package-windows.ps1
src/: CMakeLists.txt  plugin-macros.generated.h  plugin-macros.h.in  tuna_plugin.cpp
src/gui/: music_control.cpp  music_control.hpp  music_control.ui  output_edit_dialog.cpp  output_edit_dialog.hpp  output_edit_dialog.ui  scrolltext.cpp  scrolltext.hpp  tuna.qrc  tuna_gui.cpp  tuna_gui.hpp  tuna_gui.ui
src/gui/widgets/: deezer.cpp  deezer.hpp  deezer.ui  icecast.cpp  icecast.hpp  icecast.ui  lastfm.cpp  lastfm.hpp  lastfm.ui  mpd.cpp  mpd.hpp  mpd.ui  mpris.cpp  mpris.hpp  mpris.ui  spotify.cpp  spotify.hpp  spotify.ui  vlc.cpp  vlc.hpp  vlc.ui  window_title.cpp  window_title.hpp  window_title.ui  wmc.cpp  wmc.hpp  wmc.ui
src/query/: deezer_source.cpp  deezer_source.hpp  gpmdp_source.cpp  gpmdp_source.hpp  icecast_source.cpp  icecast_source.hpp  lastfm_source.cpp  lastfm_source.hpp  mpd_source.cpp  mpd_source.hpp  mpris_source.cpp  mpris_source.hpp  music_source.cpp  music_source.hpp  song.cpp  song.hpp  spotify_source.cpp  spotify_source.hpp  vlc_obs_source.cpp  vlc_obs_source.hpp  web_source.cpp  web_source.hpp  window_source.cpp  window_source.hpp  wmc_source.cpp  wmc_source.hpp
src/source/: progress.cpp  progress.hpp
src/util/: config.cpp  config.hpp  constants.hpp  cover_tag_handler.cpp  cover_tag_handler.hpp  creds.hpp  format.cpp  format.hpp  lyrics_handler.cpp  lyrics_handler.hpp  tuna_thread.cpp  tuna_thread.hpp  utility.cpp  utility.hpp  vlc_internal.c  vlc_internal.h  web_server.cpp  web_server.hpp
src/util/window/: window_helper.hpp  window_helper_mac.mm  window_helper_nix.cpp  window_helper_win.cpp
vlc/: deprecated.h  libvlc.h  libvlc_dialog.h  libvlc_events.h  libvlc_media.h  libvlc_media_discoverer.h  libvlc_media_library.h  libvlc_media_list.h  libvlc_media_list_player.h  libvlc_media_player.h  libvlc_renderer_discoverer.h  libvlc_vlm.h  vlc.h
